# llm-coding-harness-benchmarks

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  THIRD_PARTY
bedrock/: README.md
benchmark/: judge.py  run.sh
benchmarks/: README.md  pyproject.toml
benchmarks/config/: litellm-mantle.yaml  runner.example.yaml
benchmarks/dataset/: mcp-gateway-registry.yaml
benchmarks/docs/: harness-reference.md  path-anthropic-on-bedrock.md  path-open-weight-on-bedrock-litellm.md  path-self-hosted-vllm.md
benchmarks/scripts/: bedrock-mantle-proxy.sh  codex_judge.py  dataset_loader.py  extract-metrics.py  generate-cost-quality-chart.py  generate-report.py  judge_common.py  judge_prompt.txt  llm_as_judge.py  preflight_check.py  replay-benchmark.py  run-e2e-benchmark.sh  run-swe-benchmark.sh  run-swe-claude-p.sh  run-swe-headless.py  runner_config.py  select-best-lld.sh
benchmarks/swe-benchmark-data/: README.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/: JUDGE_RESULTS.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/migrate-ecs-env-vars-to-secrets-manager/claude-opus-4-8/: github-issue.md  lld.md  review.md  testing.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/migrate-ecs-env-vars-to-secrets-manager/claude-sonnet-5/: github-issue.md  lld.md  review.md  testing.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/reports/: all_scores.csv  score_matrix.csv
benchmarks/tests/: test_codex_judge.py  test_dataset_loader.py  test_llm_as_judge.py  test_run_swe_headless.py  test_runner_config.py
self-hosted/: README.md
(+148 files in other folders)
